# float

./: .gitignore  AGENTS.md  README.md  pyproject.toml
notebooks/: minimal_event_model.ipynb
src/float_sim/: __init__.py  event_model.py
src/float_sim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_event_model.py
