[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "float-sim"
version = "0.1.0"
description = "Minimal event-based Monte Carlo simulation for floating body interactions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.9",
    "numpy>=2.4.4",
]

[project.optional-dependencies]
notebook = [
    "ipykernel>=6.29",
    "jupyterlab>=4.4",
]

[dependency-groups]
dev = [
    "pytest>=8.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
